<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">597533300380476</string>
    <string name="app_name">Around here</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_checkin">CheckinActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Home Screen-->
    <string name="near_by">Around here</string>
    <string name="shop">Shop</string>
    <string name="restaurant">Restaurant</string>
    <string name="cafe">Cafe</string>
    <string name="repair">Repair</string>
    <string name="health">Health</string>

    <string name="result_dialog_title">Result</string>
    <string name="result_dialog_button_text">Thanks!</string>
    <string name="result_dialog_text_with_id">Posted Open Graph action, id: %1$s</string>
    <string name="result_dialog_text_default">Post action complete.</string>
    <string name="result_dialog_text_canceled">Post canceled.</string>
    <string name="progress_dialog_text">Announcing, please wait...</string>
    <string name="single_user_selected">%1$s</string>

    <string name="error_dialog_default_text">No response from server.</string>
    <string name="error_transient">A temporary error occurred, please try again later.</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_dialog_title">Something Went Wrong</string>
    <string name="error_dialog_button_text">OK</string>

    <!-- Menu -->
    <string name="home_menu">HOME</string>
    <string name="activity_menu">ACTIVITY</string>
    <string name="notifi_menu">Notification</string>
    <string name="setting_menu">SETTING</string>

    <!-- Register -->
    <string name="create_account">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="have_account">AlREADY HAVE AN ACCOUNT</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="policy">Are you agree Sign up with above info?</string>
    <string name="signup_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="signup_email">SIGN UP WITH EMAIL</string>

    <string name="invite_friends">Invite friends</string>
    <string name="title_activity_activity_address">ActivityAddress</string>
    <string name="title_activity_activity_test">ActivityTest</string>
    <string name="message_network_is_unavailable">Network not available.</string>
    <string name="generic_error">Error!</string>
    <string name="residence">Residence</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signin">Sign in</string>
    <string name="signin_facebook">Sign in with Facebook</string>

    <string name="choose_a_picture">Choose a Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>

    <string-array name="type_image">
        <item>@string/take_picture</item>
        <item>@string/choose_from_gallery</item>
        <item>@string/cancel</item>
    </string-array>

    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="error_enter_email">Please enter your email address</string>
    <string name="error_enter_email_correct">Please enter correct email address</string>
    <string name="error_enter_password">Please enter your password</string>
    <string name="error">Error</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password</string>
    <string name="repassword">Confirm Password</string>
    <string name="signup_google">Signup with google</string>
    <string name="login">login</string>
    <string name="SAVED">saved</string>
    <string name="saved">SAVED</string>
    <string name="space">Space</string>
    <string name="service">Service</string>
    <string name="quality">Quality</string>
    <string name="like">like</string>
    <string name="title_activity_address_in_map">Address</string>
</resources>
