<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerInParent="true"
    android:padding="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/bg_edit_register_radius"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/bg_edit_register_radius"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginBottom="10dp"
        />
    <bk.vinhdo.taxiads.utils.view.SAutoBgButton
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:background="@drawable/bg_disable"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        />

    <bk.vinhdo.taxiads.utils.view.CustomTextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center_horizontal"
        android:textColor="@color/hong"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        />

    <bk.vinhdo.taxiads.utils.view.SAutoBgButton
        android:id="@+id/signin_fb_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_facebook"
        android:background="@drawable/bg_signup_fb_selector"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />
</LinearLayout>